--- a/html/comp1113.html
+++ b/html/comp1113.html
@@ -17,162 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Yeon+Sung&display=swap');
-    @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
-
-    html {
-      margin: 0;
-      background: url(../IconPics/LightBlueMountain.jpg) repeat center center fixed;
-      background-size: cover;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: 'PT Sans Narrow', sans-serif;
-    }
-
-    .navbar {
-      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .45);
-      background-color: rgba(136, 210, 210, 0.12);
-    }
-
-    #homepagetitle {
-      font-family: 'Cinzel';
-      font-size: 25pt;
-      margin: 0 auto;
-      padding: 0;
-      font-weight: 600;
-    }
-
-    #maincontainer {
-      background-color: rgba(136, 210, 210, 0.30);
-      height: 100%;
-    }
-
-    #bannercontainer {
-      /*      background-image: url(IconPics/videoblocks-cartoon-workplace-modern-colorful-office-flat-animation-4k_bfgh8v7vdz_thumbnail-full09.png);*/
-      background-color: #8ac9cb;
-      background-size: 100% auto;
-      margin-bottom: 20px;
-/*      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);*/
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-content: center;
-    }
-
-    .bannerimage {
-      width: 100%;
-      max-height: 195px;
-      margin: 0 auto;
-      filter: opacity(0.80);
-      box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
-    }
-
-    #bannercontainer h1 {
-      margin-top: 10px;
-      margin-bottom: -50px;
-      font-size: 25pt;
-      color: white;
-      font-weight: 600;
-      text-align: center;
-      z-index: 1;
-      position: relative;
-    }
-
-    #bannerpicturecontainer {
-      display: flex;
-      justify-content: center;
-      align-content: flex-end;
-      /*
-      margin-top: 10px;
-      margin-bottom: -10px;
-*/
-      /*
-      border-style: solid;
-      border-width: 8px;
-      border-color: white;
-*/
-    }
-
-    .testing {
-      width: 100%;
-      height: 100px;
-      align-content: center;
-      margin-left: 0 auto;
-      margin-bottom: 5px;
-      border-radius: 5px;
-
-      /*      background-color: lightblue;*/
-      /*      border: solid black 1px;*/
-    }
-
-    .list-group {
-      margin-top: -35px;
-    }
-
-    .list-group-item {
-      background-color: white;
-      /*
-      border-style: solid;
-      border-color: white;
-*/
-      /*      border-width: 3px;*/
-      height: 100%;
-      width: 100%;
-      margin: 0 auto;
-      margin-bottom: 0px;
-      box-shadow: 0 3px 7px 0px rgba(0, 0, 0, .35);
-    }
-
-    @media screen and (min-width: 768px) {
-
-      #maincontainer {
-        display: flex;
-        position: relative;
-
-      }
-
-      #bannercontainer {
-        height: 100vh;
-        width: 100vw;
-        margin: 0;
-        background: url(../IconPics/LightBlueMountain.jpg) repeat center center fixed;
-        background-size: cover;
-      }
-
-      #bannercontainer:after {
-        content: "";
-/*        background-color: rgba(136, 210, 210, 0.12);*/
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        position: absolute;
-        z-index: 0;
-      }
-
-      .bannerimage {
-        display: none;
-      }
-
-      .list-group {
-        position: absolute;
-        right: 50%;
-        top: 80px;
-        width: 500px;
-        transform: translateX(250px);
-      }
-
-      .list-group-item {
-        margin-bottom: 5px;
-      }
-    }
-
-  </style>
+  <link rel="stylesheet" href="../css/comp1113.css"/>
 </head>
 
 <body>
@@ -249,63 +94,7 @@
     });
 
   </script>
-  <script>
-    const workList = document.querySelector('.list-group');
-
-    function renderWork(doc) {
-      let li = document.createElement('a');
-      li.classList.add("testing", "list-group-item", "list-group-item-action", "flex-column", "align-items-start");
-      let name = document.createElement('div');
-      let dueDate = document.createElement('p');
-      let cross = document.createElement('div');
-      let desc = document.createElement('div');
-
-      var stringMonth = doc.data().dueDate + '';
-      var res = stringMonth.split("-"); // turn the date into a list format (Split by / if needed)
-      var months = ["Jan", "Feb", "March", "April", "May", "June", "July",
-        "August", "September", "October", "November", "December"
-      ];
-
-      dueDate.textContent = (months[res[1] - 1] + " " + [res[2]] + ", " + [res[0]]);
-      desc.textContent = doc.data().description;
-      li.setAttribute('data-id', doc.id);
-      name.textContent = doc.data().name;
-
-
-      li.appendChild(name);
-      li.appendChild(desc);
-      li.appendChild(dueDate);
-      li.appendChild(cross);
-
-      workList.appendChild(li);
-
-      // deleting data
-      cross.addEventListener('click', (e) => {
-        e.stopPropagation();
-        let id = e.target.parentElement.getAttribute('data-id');
-        db.collection('COMP1930').doc(id).delete();
-      });
-    }
-    // real-time listener
-
-
-    db.collection("COMP1930").orderBy("dueDate", "desc").onSnapshot(snapshot => {
-      let changes = snapshot.docChanges();
-      changes.forEach(change => {
-
-        console.log(change.doc.data());
-
-        if (change.type == 'added') {
-          renderWork(change.doc);
-
-        } else if (change.type == 'removed') {
-          let li = workList.querySelector('[data-id=' + change.doc.id + ']');
-          workList.removeChild(li);
-        }
-      });
-    });
-
-  </script>
+  <script src="../js/comp1113.js"></script>
 
 </body>
 
